Fix logo display on small screens

--- a/src/components/DashboardHome/Dashboard.css
+++ b/src/components/DashboardHome/Dashboard.css
@@ -40,8 +40,12 @@
     font-size: 1.5em;
 }
 
+.storeUrl {
+    padding: 10px 20px 0 20px;
+}
+
 #storeUrl {
-    font-size: 0.8em;
+    font-size: 1rem;
     color: yellow;
 }
 
